# zcompat

./: Bakefiles.bkgen  ChangeLog  Makefile.in  README  TODO  aclocal.m4  autoconf_inc.m4  config.h.in  configure.ac  makefile.vc  uconfig.h  zcompat.bkl  zcompat.dsw  zcompat_zcompat.dsp  zcompat_zcompats.dsp
debian/: changelog  control  copyright  files  libzcompat-dev.dirs  libzcompat-dev.doc-base  libzcompat-dev.docs  libzcompat-dev.files  libzcompat-dev.postinst.debhelper  libzcompat-dev.prerm.debhelper  rules  watch.ex
doc/: Makefile.in  docinfo.docbook  docmake.sh.in  entities.sgml  style-html-nochunks.xsl  style-html.xsl  style-htmlhelp.xsl  style-xhtml-nochunks.xsl  style-xhtml.xsl  style.css  style.dsl  zcompat.docbook
include/zcompat/: str.h  zansic.h  zcompat.h  zdefs.h  zlinkdll.h  zmm.h  zmod.h  zopt.h  zpio.h  zpiocpp.h  zprintf.h  zsystype.h  zthread.h  ztools.h
misc/: bkupdchangelog  cfg_update.sh
src/: Makefile.in  ansi.c  binio.c  bsdsock.c  chain.c  chconv.c  convtabl.c  dir.c  dlxgen.c  dlxload.cpp  dstream.c  error.c  filter.c  filter.template.c  getcon.c  heap.c  heap.h  mdmfdbg.c  membuf.c  mfifo.c  netio.c  open.c  pipe.c  posix.c  sbtree.c  sbuffer.c  scipher.c  slist.c  smap.c  smtp.c  sstack.c  sstr.c  stdio.c  str.c  textio.c  udp.c  upipe.c  utils.c  vform.c  werror.c  (+25 more)
tests/: Makefile.in  chconv1.c  mm1.c
